[fix]#7967 cross-close overflow

--- a/css/icons.less
+++ b/css/icons.less
@@ -1129,6 +1129,7 @@ i.edit:before{
 i.close-2x{
   .fonticon;
   text-align: center;
+  position: relative!important;
 }
 i.close-2x:before{
   content: '\e866';
